@@ -17,7 +17,7 @@
 
     <groupId>com.app</groupId>
     <artifactId>tcalc</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.17</version>
 
     <name>tax-calculator</name>
     <properties>
@@ -29,8 +29,9 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <mainClass>com.app.tax.cli.App</mainClass>
-        <artifactsDir>target</artifactsDir>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <artifactsDir>target/distributions</artifactsDir>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.organization>i-denipermana</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
@@ -78,7 +79,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.10.1</version>
                     <configuration>
                         <annotationProcessorPaths>
                             <path>
@@ -98,11 +99,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.4.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.jreleaser</groupId>
-                    <artifactId>jreleaser-maven-plugin</artifactId>
-                    <version>1.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.graalvm.buildtools</groupId>
@@ -154,40 +150,6 @@
                 <version>3.1.2</version>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
-                <artifactId>native-image-maven-plugin</artifactId>
-                <version>21.2.0</version>
-                <configuration>
-                    <mainClass>${mainClass}</mainClass>
-                    <imageName>calc</imageName>
-                    <buildArgs>
-                        --no-fallback
-                        --report-unsupported-elements-at-runtime
-                        --allow-incomplete-classpath
-                        -H:+ReportExceptionStackTraces
-                    </buildArgs>
-                    <skip>false</skip>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>native-image</goal>
-                        </goals>
-                        <phase>install</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.10</version>
@@ -195,7 +157,7 @@
                     <programs>
                         <program>
                             <mainClass>com.app.tax.cli.App</mainClass>
-                            <id>calc</id>
+                            <id>${appName}</id>
                         </program>
                     </programs>
                 </configuration>
@@ -203,11 +165,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.4.2</version>
                 <configuration>
                     <attach>false</attach>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>${appName}-${project.version}-${os.detected.classifier}</finalName>
-                    <outputDirectory>${app.distribution.directory}</outputDirectory>
+                    <finalName>${project.artifactId}-${project.version}-${os.detected.classifier}</finalName>
+                    <outputDirectory>${project.build.directory}/distributions</outputDirectory>
                     <workDirectory>${project.build.directory}/assembly/work</workDirectory>
                     <skipAssembly>true</skipAssembly>
                 </configuration>
@@ -289,30 +252,20 @@
                         <extensions>true</extensions>
                         <executions>
                             <execution>
+                                <id>test-native</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                            </execution>
+                            <execution>
                                 <id>build-native</id>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>build</goal>
                                 </goals>
-                                <phase>package</phase>
-                            </execution>
-                            <execution>
-                                <id>release-native</id>
-                                <goals>
-                                    <goal>release</goal>
-                                </goals>
-                                <phase>release</phase>
                             </execution>
                         </executions>
-                        <configuration>
-                            <imageName>${appName}-${project.version}</imageName>
-                            <mainClass>${mainClass}</mainClass>
-                            <buildArgs>
-                                <buildArg>--allow-incomplete-classpath</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>--verbose</buildArg>
-                            </buildArgs>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -347,71 +300,49 @@
                     <plugin>
                         <groupId>org.jreleaser</groupId>
                         <artifactId>jreleaser-maven-plugin</artifactId>
+                        <version>1.2.0</version>
                         <configuration>
                             <jreleaser>
                                 <project>
                                     <copyright>2022 Deni Permana</copyright>
                                     <description>Tax Calculator CLI</description>
-                                    <snapshot>
-                                        <label>{{ projectVersionNumber }}-early-access</label>
-                                    </snapshot>
+                                    <longDescription>
+                                        Tax Calculator CLI
+                                    </longDescription>
                                 </project>
-                                <packagers>
-                                    <!--                                    <brew>-->
-                                    <!--                                        <active>RELEASE</active>-->
-                                    <!--                                        <continueOnError>true</continueOnError>-->
-                                    <!--                                        <multiPlatform>true</multiPlatform>-->
-                                    <!--                                    </brew>-->
-                                    <!--<sdkman>-->
-                                    <!--    <active>RELEASE</active>-->
-                                    <!--    <continueOnError>true</continueOnError>-->
-                                    <!--</sdkman>-->
-                                </packagers>
                                 <release>
                                     <github>
-                                        <owner>i-denipermana</owner>
+                                        <tagName>{{projectVersion}}</tagName>
+                                        <releaseName>{{projectVersion}}</releaseName>
                                         <overwrite>true</overwrite>
+                                        <changelog>
+                                            <formatted>ALWAYS</formatted>
+                                            <format>- {{commitShortHash}} {{commitTitle}}</format>
+                                            <preset>conventional-commits</preset>
+                                            <contributors>
+                                                <format>- {{contributorName}}</format>
+                                            </contributors>
+                                            <hide>
+                                                <categories>merge</categories>
+                                                <contributors>GitHub,dependabot</contributors>
+                                            </hide>
+                                        </changelog>
                                     </github>
                                 </release>
                                 <distributions>
                                     <tcalc>
-                                        <name>${appName}</name>
                                         <type>NATIVE_IMAGE</type>
                                         <artifacts>
                                             <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.tar.gz
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-linux-x86_64.tar.gz
-                                                </transform>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.tar.gz</path>
                                                 <platform>linux-x86_64</platform>
                                             </artifact>
                                             <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.zip
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-linux-x86_64.zip
-                                                </transform>
-                                                <platform>linux-x86_64</platform>
-                                            </artifact>
-                                            <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-windows-x86_64.zip
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-windows-x86_64.zip
-                                                </transform>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-windows-x86_64.zip</path>
                                                 <platform>windows-x86_64</platform>
                                             </artifact>
                                             <artifact>
-                                                <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.zip
-                                                </path>
-                                                <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-x86_64.zip
-                                                </transform>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.zip</path>
                                                 <platform>osx-x86_64</platform>
                                             </artifact>
                                         </artifacts>
